tests/sqlcmd/baselines/errors/remove_classes2.errbaseline
Unexpected Ad Hoc Planning Error: java.lang.RuntimeException: Error compiling query: org.voltdb.planner.PlanningErrorException: SQL Syntax error in "REMOVE CLASSES" unexpected token: REMOVE
